# torapplet-svn

trunk/: AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac
trunk/doc/: Makefile.am  Makefile.in
trunk/m4/: Makefile.am  Makefile.in  ac_python_module.m4
trunk/pixmaps/: Makefile.am  Makefile.in
trunk/po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  bn.po  da.po  en_CA.po  fr.po  it.gmo  it.po  sv.po  torapplet0.pot
trunk/src/: GNOME_TorApplet.server  Makefile.am  Makefile.in  torapplet0.glade  torapplet0.glade.c  torapplet0.gladep  torapplet0.py.in
trunk/src/TorApplet0/: Makefile.am  Makefile.in  Observer.py  TorControl.py  TorMonitor.py  TorResolve.py  TorStartStop.py  __init__.py
